// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`questions reducer should match snapshot when ANSWER_QUESTION action is dispatched 1`] = `
{
  "q1": {
    "id": "q1",
    "optionOne": {
      "text": "Option One",
      "votes": [
        "user1",
      ],
    },
    "optionTwo": {
      "text": "Option Two",
      "votes": [],
    },
  },
}
`;

exports[`questions reducer should match snapshot when RECEIVE_QUESTIONS action is dispatched 1`] = `
{
  "q1": {
    "id": "q1",
    "optionOne": {
      "text": "Option One",
      "votes": [],
    },
    "optionTwo": {
      "text": "Option Two",
      "votes": [],
    },
  },
  "q2": {
    "id": "q2",
    "optionOne": {
      "text": "Option A",
      "votes": [],
    },
    "optionTwo": {
      "text": "Option B",
      "votes": [],
    },
  },
}
`;

exports[`questions reducer should match snapshot when SAVE_QUESTION action is dispatched 1`] = `
{
  "q3": {
    "id": "q3",
    "optionOne": {
      "text": "New Option One",
      "votes": [],
    },
    "optionTwo": {
      "text": "New Option Two",
      "votes": [],
    },
  },
}
`;
